--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <h1>Contact Me</h1>
 <p><a href="https://www.linkedin.com/in/nicole-cox-73391038/">Linkedin</a></p
   <form class="" action="index.html" method="post">
