--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 </head>
 
 <body>
-  <table cellspacing=20">
+  <table>
+
     <tr>
       <td><img src="circle-croppedn.png" alt="Nicole Cox Profile picture"></td>
       <td><h1>Nicole Cox</h1>
       <p><em>Self-taught Software Engineer</em></p>
 
-      <a href="Contact.html">Contact Me</a>
-    <p>I am currently teaching myself Web development with Udemy.I am a college graduate with a degree in psychology but I am looking to have an career change that I love.</p> </td>
 
+
+    <p>I am currently teaching myself Web development with Udemy.I am a college graduate with a degree in psychology but I am looking to have an career change that I love.</p> </td>
+<a href="contact.html">Contact Me</a>
+</td>
     </tr>
-  </table>
+      </table>
+
+
+
 
 
 <hr size=3" noshade>
