--- a/index.html
+++ b/index.html
@@ -11,87 +11,87 @@
 
     <tr>
       <td><img src="circle-croppedn.png" alt="Nicole Cox Profile picture"></td>
-  
-      <td><h1>Nicole Cox</h1>
-      <p><em>Self-taught Software Engineer</em></p>
 
-<a href="contact.html">Contact Me</a>
+      <td>
+        <h1>Nicole Cox</h1>
+        <p><em>Self-taught Software Engineer</em></p>
 
-    <p>I am currently teaching myself Web development with Udemy.I am a college graduate with a degree in psychology but I am looking to have an career change that I love.</p> </td>
+        <p><a href="contact.html">Contact Me</a></p>
 
-</td>
+        <p>I am currently teaching myself Web development with Udemy.I am a college graduate with a degree in psychology but I am looking to have an career change that I love.</p>
+      </td>
     </tr>
-      </table>
+  </table>
 
 
 
 
+  <hr size=3" noshade>
 
-<hr size=3" noshade>
+  <h3><strong>Education</strong> </h3>
+  <ul>
+    <li>Udemy
+      <ul>
+        <li><em>2020</em></li>
+        <li>Web development</li>
+      </ul>
+    <li>SUNY
+      <ul>
+        <li><em>2011</em></li>
+        <li>Psychology</li>
+      </ul>
+    </li>
+    </li>
 
-<h3><strong>Education</strong> </h3>
-<ul>
-  <li>Udemy
-    <ul>
-    <li><em>2020</em></li>
-    <li>Web development</li>
   </ul>
-  <li>SUNY
-    <ul>
-    <li><em>2011</em></li>
-    <li>Psychology</li>
-    </ul>
-  </li></li>
+  </ul />
+  <hr>
 
-</ul>
-</ul/>
-<hr>
+  <a href="Hobbies.html">My Hobbies</a>
+  <hr>
 
-<a href="Hobbies.html">My Hobbies</a>
-<hr>
-
-<h3><strong>Work Experience</strong></h3>
-<table cellspacing="10">
-  <thead>
-  <th>Dates</th>
-  <th>Work</th>
-  </thead>
-  <tbody>
-    <td>Aug 2017- Present</td>
-    <td>Airlines</td>
-    <tr>
-      <td>Oct 2012- June 2017</td>
-      <td>Pre-k</td>
-    </tr>
-
-  </tbody>
-</table>
-
-<hr>
-
-<h3>Skills</h3>
-<table cellspacing= "10">
-  <colgroup span="4"></colgroup>
-  <tbody>
-    <td>HTML(5)</td>
-    <td>⭐️⭐️</td>
-    <td>CSS</td>
-    <td>⭐️</td>
-    <tr>
-      <td>Teamwork</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-      <td>Javascript</td>
-      <td>⭐️</td>
-    </tr>
-    <tr>
-      <td>Windows</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-      <td>Mac</td>
-      <td>⭐️⭐️</td>
-    </tr>
+  <h3><strong>Work Experience</strong></h3>
+  <table cellspacing="10">
+    <thead>
+      <th>Dates</th>
+      <th>Work</th>
+    </thead>
+    <tbody>
+      <td>Aug 2017- Present</td>
+      <td>Airlines</td>
+      <tr>
+        <td>Oct 2012- June 2017</td>
+        <td>Pre-k</td>
+      </tr>
 
     </tbody>
-</table>
+  </table>
+
+  <hr>
+
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <colgroup span="4"></colgroup>
+    <tbody>
+      <td>HTML(5)</td>
+      <td>⭐️⭐️</td>
+      <td>CSS</td>
+      <td>⭐️</td>
+      <tr>
+        <td>Teamwork</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+        <td>Javascript</td>
+        <td>⭐️</td>
+      </tr>
+      <tr>
+        <td>Windows</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+        <td>Mac</td>
+        <td>⭐️⭐️</td>
+      </tr>
+
+    </tbody>
+  </table>
 
 
 
